# esp-ssh-console

./: .gitignore
main/: CMakeLists.txt  Kconfig.projbuild  console_example_main.c  idf_component.yml  server.c  server.h  ssh_example_main.c  ssh_server.c  ssh_server.h
